--- a/themes/viewer/style/style.css
+++ b/themes/viewer/style/style.css
@@ -39,7 +39,7 @@ a:hover { color:#bd0a01;text-decoration:underline;}
                 #portal-globalnav li { float:left; margin:0; padding:0; width:20%; height:40px; line-height:40px;
 								list-style-type:none; font-size:14px;}
                 #portal-globalnav li a { display:block; text-align:center; color:#FFF; text-decoration:none; border-right:1px solid #CCC; font-weight:700;}
-                #portal-globalnav li.selected a { COLOR: #FFF; background:#4FAAD9 !important;}
+                #portal-globalnav li.active a { COLOR: #FFF; background:#4FAAD9 !important;}
                 #portal-globalnav li a:hover { color: #FFF; background:#4FAAD9 !important; }
 
 
@@ -76,8 +76,9 @@ a:hover { color:#bd0a01;text-decoration:underline;}
 
                 #content .section pre { background:url(images/quote.gif) no-repeat right bottom #F5F5F5; padding:10px; border:1px solid #E0E0E0; margin:10px 0; line-height:1.5em; }
 
-                #content .section h2 a, #content .section h3 a { color:#333; text-decoration:none; }
-                #content .section h2 { padding-bottom:10px; border-bottom:1px dotted #CCC; }
+                #content .section h1 a { color:#333; text-decoration:none; font-size:28px;font-weight:normal }
+                #content .section h2 a {color:#333; text-decoration:none;font-size:20px; font-weight:normal}
+                #content .section h1 { padding-bottom:10px; border-bottom:1px dotted #CCC;font-size:28px; font-weight:normal;color:#000000; margin-bottom: 20px;}
 
                 #content .portlet { float:right; width:25%; padding:1%; background:#FAFAFA; border:1px solid #CCC; border-top-width:2px; margin-left:2%; }
                     #content .portlet ul { list-style-type:none; }
