--- a/themes/bootstrap/css/home.css
+++ b/themes/bootstrap/css/home.css
@@ -21,7 +21,8 @@ ul.nav li {
 }
 
 .fix-padding {
-  padding: 25px 0 15px;
+  margin-top: 40px;
+  padding-bottom: 15px;
 }
 
 #edoviewer {
@@ -43,7 +44,7 @@ ul.nav li {
 
 .container h1 {
   font-weight: 500;
-  font-size: 50px;
+  font-size: 45px;
   line-height: 1;
 }
 
