--- a/themes/viewer-bootstrap/css/home.css
+++ b/themes/viewer-bootstrap/css/home.css
@@ -1,7 +1,7 @@
 @media (max-width: 767px) {
   body {
-    padding-right: 0px;
-    padding-left: 0px;
+    padding-right: 0px!important;
+    padding-left: 0px!important;
   }
 }
 
